--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/JustFlyingInTheSky/notesblogreco#readme",
   "devDependencies": {
     "vuepress": "^1.4.0",
+    "vuepress-plugin-container": "^2.1.2",
     "vuepress-theme-reco": "^1.3.2"
   }
 }
